Fixed overflow (#314)
Some segments had scroll bars on Windows for some reason which looked bad and broke alignment.

--- a/css/year-one.scss
+++ b/css/year-one.scss
@@ -64,7 +64,7 @@ article.year-one {
 
   .background {
     z-index: -1;
-    overflow: auto;
+    overflow: hidden;
     background-size: cover;
     background-attachment: fixed;
   }
